[project]
name = "styleadv-cdfsl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14.0",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "ml-collections>=1.1.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
    "tensorboardx>=2.6.4",
    "timm>=1.0.20",
    "wandb>=0.22.0",
]
